restored WorldGuard Compatibility